--- a/ProjectFinal1.csproj
+++ b/ProjectFinal1.csproj
@@ -20,10 +20,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\uploadfiles\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ProjectFinal1DB.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
