พอบันทึกเเล้วมีข้อมูลเพิ่ม

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjectDbContextConnection": "Server=.\\SQLEXPRESS;Database=ProjectFinal1DB;Trusted_Connection=True;TrustServerCertificate=True"
+    "ProjectDbContextConnection": "Server=DESKTOP-98H5AH3\\SQLEXPRESS01;Database=ProjectFinal1DB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
