--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjectDbContextConnection": "Server=.\\SQLEXPRESS;Database=ProjectFinal1DB;Trusted_Connection=True;TrustServerCertificate=True"
+    "ProjectDbContextConnection": "Server=localhost;Database=ProjectFinal1DB;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
   }
 }
