--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"ProjectDbContextConnection": "Server=localhost;Database=ProjectFinal1DB;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
-    "ProjectDbContextConnection": "Server=DESKTOP-98H5AH3\\SQLEXPRESS01;Database=ProjectFinal1DB;Trusted_Connection=True;TrustServerCertificate=True",
+    "ProjectDbContextConnection": "Server=localhost;Database=ProjectFinal1DB;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
+    //"ProjectDbContextConnection": "Server=DESKTOP-98H5AH3\\SQLEXPRESS01;Database=ProjectFinal1DB;Trusted_Connection=True;TrustServerCertificate=True",
     //"ProjectDbContextConnection": "Server=.\\SQLEXPRESS;Database=ProjectFinal1DB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
